잡다한 변경사항

--- a/utiltest.ipynb
+++ b/utiltest.ipynb
@@ -802,12 +802,168 @@
    "execution_count": 4
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-09T07:48:48.909594Z",
+     "start_time": "2025-10-09T07:48:46.559582Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import torch\n",
+    "\n",
+    "A = torch.tensor([[[1,0],[1,1]], [[0,1],[1,0]]])\n",
+    "B = torch.tensor([[[1,1],[0,1]], [[1,0],[1,1]]])"
+   ],
+   "id": "112fc4e028cf908c",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-09T07:49:11.335749Z",
+     "start_time": "2025-10-09T07:49:11.331749Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "A",
+   "id": "3a1c604f9aa6eb2f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1, 0],\n",
+       "         [1, 1]],\n",
+       "\n",
+       "        [[0, 1],\n",
+       "         [1, 0]]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-09T07:49:14.264858Z",
+     "start_time": "2025-10-09T07:49:14.261403Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "B",
+   "id": "ecb6919d4a9981c5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1, 1],\n",
+       "         [0, 1]],\n",
+       "\n",
+       "        [[1, 0],\n",
+       "         [1, 1]]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-09T07:48:54.030216Z",
+     "start_time": "2025-10-09T07:48:54.022215Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "mask = (A == 1) & (B == 1)",
+   "id": "57788ca68df8539c",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-09T07:48:55.541407Z",
+     "start_time": "2025-10-09T07:48:55.536404Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "mask",
+   "id": "bbd7a34839209cec",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ True, False],\n",
+       "         [False,  True]],\n",
+       "\n",
+       "        [[False, False],\n",
+       "         [ True, False]]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-09T07:49:46.118430Z",
+     "start_time": "2025-10-09T07:49:46.111620Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "result = mask.to(torch.int)",
+   "id": "78ca2a13f6ece68",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-09T07:49:47.739652Z",
+     "start_time": "2025-10-09T07:49:47.735750Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "result",
+   "id": "72da498051cfba0",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1, 0],\n",
+       "         [0, 1]],\n",
+       "\n",
+       "        [[0, 0],\n",
+       "         [1, 0]]], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "112fc4e028cf908c"
+   "id": "eef8936f7c391e1d"
   }
  ],
  "metadata": {
